log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 03:40:00 PM UTC: 
 tests:  0|6
total_score: 0/70
5006fa9
Thu 30 Mar 2023 03:42:38 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
0a21424
Thu 30 Mar 2023 03:45:40 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:30: error: returning ‘int’ from a function with return type ‘ArrayList *’ {aka ‘struct ArrayList *’} makes pointer from integer without a cast [-Werror=int-conversion]
   15 |   if(auxList == NULL) return EXIT_FAILURE;
      |                              ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
850e2c1
Thu 30 Mar 2023 03:47:12 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:30: error: returning ‘int’ from a function with return type ‘ArrayList *’ {aka ‘struct ArrayList *’} makes pointer from integer without a cast [-Werror=int-conversion]
   15 |   if(auxList == NULL) return EXIT_FAILURE;
      |                              ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7104c86
Thu 30 Mar 2023 03:47:31 PM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:12: error: returning ‘int’ from a function with return type ‘ArrayList *’ {aka ‘struct ArrayList *’} makes pointer from integer without a cast [-Werror=int-conversion]
   17 |     return EXIT_FAILURE;
      |            ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
45e446d
Thu 30 Mar 2023 03:53:42 PM UTC: 
 arraylist.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:3: error: ‘listAux’ undeclared (first use in this function); did you mean ‘linux’?
   15 |   listAux->data = (void **)malloc(sizeof(void *));
      |   ^~~~~~~
      |   linux
arraylist.c:15:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
13a837a
Thu 30 Mar 2023 03:54:05 PM UTC: 
 arraylist.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
fb8b6db
Thu 30 Mar 2023 03:56:01 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b75f07f
Thu 30 Mar 2023 04:01:39 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:23:13: error: ‘dato’ undeclared (first use in this function); did you mean ‘data’?
   23 |   l->size = dato;
      |             ^~~~
      |             data
arraylist.c:23:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
7fa1be1
Thu 30 Mar 2023 04:01:46 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:23:11: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   23 |   l->size = data;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
4210289
Thu 30 Mar 2023 04:03:59 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
c6b3b60
Thu 30 Mar 2023 04:09:12 PM UTC: 
 arraylist.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:25:13: error: assignment to ‘void **’ from incompatible pointer type ‘ArrayList **’ {aka ‘struct ArrayList **’} [-Werror=incompatible-pointer-types]
   25 |     l->data = (ArrayList **) realloc(l->data, sizeof(void*) * l->capacity * 2);
      |             ^
cc1: all warnings being treated as errors
Compilation failed
311a55e
Thu 30 Mar 2023 04:09:20 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:25:7: error: assignment to ‘ArrayList *’ {aka ‘struct ArrayList *’} from incompatible pointer type ‘ArrayList **’ {aka ‘struct ArrayList **’} [-Werror=incompatible-pointer-types]
   25 |     l = (ArrayList **) realloc(l->data, sizeof(void*) * l->capacity * 2);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
cf25521
Thu 30 Mar 2023 04:09:36 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:25:21: error: initialization of ‘ArrayList *’ {aka ‘struct ArrayList *’} from incompatible pointer type ‘ArrayList **’ {aka ‘struct ArrayList **’} [-Werror=incompatible-pointer-types]
   25 |     ArrayList * l = (ArrayList **) realloc(l->data, sizeof(void*) * l->capacity * 2);
      |                     ^
arraylist.c:25:70: error: ‘l’ may be used uninitialized [-Werror=maybe-uninitialized]
   25 |     ArrayList * l = (ArrayList **) realloc(l->data, sizeof(void*) * l->capacity * 2);
      |                                                                     ~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
83e9c1d
Thu 30 Mar 2023 04:09:49 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:25:18: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   25 |     ArrayList * l->data = (ArrayList **) realloc(l->data, sizeof(void*) * l->capacity * 2);
      |                  ^~
arraylist.c:25:18: error: expected expression before ‘->’ token
Compilation failed
f1bd716
Thu 30 Mar 2023 04:10:15 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:25:7: error: assignment to ‘ArrayList *’ {aka ‘struct ArrayList *’} from incompatible pointer type ‘ArrayList **’ {aka ‘struct ArrayList **’} [-Werror=incompatible-pointer-types]
   25 |     l = (ArrayList **) realloc(l->data, sizeof(void*) * l->capacity * 2);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
4cbed45
Thu 30 Mar 2023 04:10:44 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
1216f7a
